# advent_of_code

./: .gdb_history  .gitignore  Cargo.toml  README.md  download.sh  new_year.sh
src/: macros.rs  main.rs
src/helpers/: grid.rs  mod.rs  silly_iterators.rs
src/solutions_2023/: day01.rs  day02.rs  day03.rs  day04.rs
src/solutions_2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs
src/solutions_2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
